Pure validation of HTS transfers fails (#2753)
* Fix the way transferlists are decoded for the HTS precompile

Signed-off-by: Stoyan Panayotov <stoyan.panayotov@limechain.tech>

* Increase codecov

Signed-off-by: Stoyan Panayotov <stoyan.panayotov@limechain.tech>

* Increase codecov

Signed-off-by: Stoyan Panayotov <stoyan.panayotov@limechain.tech>

* Increase codecov

Signed-off-by: Stoyan Panayotov <stoyan.panayotov@limechain.tech>

* Cleanup transfers validation fix (#2759)

* Initial commit

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Complete logic to merge TokenTransferLists by token id in synthetic CryptoTransfer

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Increase code coverage

Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>

* Hscs key tests combined (#2755)

* fix ContractCreateSuite (#2750)

Signed-off-by: anighanta <anirudh.ghanta@hedera.com>

* add e2e tests:
- callForMintWithContractKey
- callForTransferWithContractKey
- callForAssociateWithContractKey
- callForDissociateWithContractKey
- callForBurnWithContractKey
- callForMintWithDelegateContractKey
- callForTransferWithDelegateContractKey
- callForAssociateWithDelegateContractKey
- callForDissociateWithDelegateContractKey
- callForBurnWithDelegateContractKey
- staticCallForTransferWithContractKey
- staticCallForBurnWithContractKey
- staticCallForMintWithContractKey
- delegateCallForTransferWithContractKey
- delegateCallForBurnWithContractKey
- delegateCallForMintWithContractKey
- staticCallForTransferWithDelegateContractKey
- staticCallForBurnWithDelegateContractKey
- staticCallForMintWithDelegateContractKey
- burnWithKeyAsPartOf1OfXThreshold
- transferWithKeyAsPartOf2OfXThreshold

Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>

* adding E2E tests for KEY-8 and KEY-10 scenarios

Signed-off-by: Ivan Kavaldzhiev <ivankavaldzhiev@gmail.com>

* combining all test cases for HSCS-KE